* 2016.12.20 - added detection of Raspberry Pi platform features

* 2016.12.19 - fixing typos in soft scripts

* 2016.12.13 - fixing bug in module 'machine'

* 2016.12.10 - added script:download-and-install-package-with-cmake to start unifying download + cmake + install
             - added 'ask_version' for packages

* 2016.12.07 - fixing Bazel soft desc

* 2016.12.05 - added os:*arm-v7a (mainly for Caffe for Android)

* 2016.12.02 - added user-friendly print of OS alias
             - added better error reporting when host/target OS is not matching env entries

* 2016.12.01 - added soft:compiler.llvm.android.ndk (and started preparing paths without GCC)
             - a few cosmetic changes

* 2016.11.30 - do not show empty dependencies which are not for a used target
             - fixed using of preprocess scripts from another entry

* 2016.11.28 - do not look for connected Android device, when just refreshing existing env for it

* 2016.11.24 - fixing version detection of texinfo

* 2016.11.20 - detect OS ABI using uname -m in 'detect platform.os'
             - added container for any result

* 2016.11.19 - added possibility to skip setup during package installation
               (for example for root installation)
             - added soft:lib.ncurses
             - added "force_env_init" to dependency description to force env script execution
               (useful for LLVM plugins)

* 2016.11.18 - added LLVM plugin soft description

* 2016.11.16 - added LLVM lib and include to be able to compile plugins

* 2016.11.14 - added support to reuse preinstall scripts from other entries during package installation
             - added support for CrystaX Android NDK
             - added extra soft name customization from soft customize.py scripts
             - added soft:process-compiler-for-cmake (to compile complex projects such as Caffe with all deps via CK)

* 2016.11.11 - fixed bug: no possible not to search for installed software